# django-fastapi-benchmark

./:  test_performance.py  Dockerfile  docker-compose.yml  postgresql.conf  pyproject.toml  requirements.txt
src/: main.py
src/app/: models.py  urls.py  views.py
src/app/management/commands/: generate_data.py
src/app/migrations/: 0001_initial.py
src/config/: asgi.py  settings.py  urls.py
