[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.13",
    "asyncpg>=0.30.0",
    "django>=5.1.7",
    "faker>=37.0.0",
    "fastapi>=0.115.11",
    "gunicorn[gevent]>=23.0.0",
    "psycopg[binary,pool]>=3.2.6",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.34.0",
    "uvicorn-worker>=0.3.0",
]
